syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.example.proto";
option java_outer_classname = "UserProto";

package user;

service User {
  rpc SendUserData (UserRequest) returns (UserResponse) {}
}

message UserRequest {
  string id = 1;
  UserDetails user = 2;
  repeated Item items = 3;
}

message UserDetails {
  string username = 1;
  string email = 2;
  Address address = 3;
}

message Address {
  string street = 1;
  string city = 2;
  string state = 3;
  string zip = 4;
}

message Item {
  string itemId = 1;
  string name = 2;
  string description = 3;
  float price = 4;
  int32 quantity = 5;
}

message UserResponse {
  string message = 1;
}

message ItemSummary {
  string itemId = 1;
  string name = 2;
  float totalPrice = 3;
}
